More refactoring with IDEA: Discovered that resources aren't found properly.